# SA-Mock-Address-Generator

./: .gitignore  .prettierignore  BUILD.md  CHANGELOG.md  FINAL_PACKAGE_STATUS.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  __init__.py  api.py  cli.py  config.py  data_processor.py  env.example  example_usage.py  generate_addresses.py  lookup_address.py  main.py  pyproject.toml  requirements.txt  sa_address  sa_address_api.py  sa_address_lookup.py  setup.py  simple_example.py
.github/workflows/: test.yml
core/: __init__.py  dependency_container.py
data/: regional_coastal_addresses_1.9k.csv  sa_suburbs_data.csv  sample_results.xlsx  ~$sample_results.xlsx
demo/: simple_generator.py
generators/: __init__.py  address_assembler.py  address_generator_impl.py  distribution_manager.py  street_address_generator.py
interfaces/: __init__.py  address_generation.py  data_processing.py  geocoding.py
processors/: __init__.py  data_cleaner.py  data_loader.py  data_processor_impl.py  suburb_sampler.py
providers/: __init__.py  coordinate_cache.py  fallback_coordinates.py  mapbox_geocoder.py  suburb_geocoder_impl.py
sa_mock_address_generator/: __init__.py  cli.py  config.py  data_processor.py  lookup_cli.py  sa_address_api.py  suburb_geocoder.py
tests/: test_basic.py
